--- a/day6/index-new.html
+++ b/day6/index-new.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style-new.css">
   <link rel="shortcut icon" href="favicon-16x16.png" type="image/x-icon">
   <link rel="icon" href="favicon-16x16.png" type="image/x-icon">
 </head>
@@ -23,7 +23,7 @@
       <div class="header-bar">
 
         <form class="search-area">
-          <input type="text" placeholder="Search for datas & reports" >
+          <input class="text-search" type="text" placeholder="Search for datas & reports" >
           <input type="image" src="search--v1.png" name="submit" alt="submit"> 
         </form>
         <div class="account">
@@ -38,19 +38,20 @@
     </header>
 
     <main>
-      <nav>
-        <ul class="nav-list">
-          <li class="nav-items">Dashboard</li>
-          <li class="nav-items">Charts</li>
-          <li class="nav-items">Tables</li>
-          <li class="nav-items">Forms</li>
-          <li class="nav-items">Calendar</li>
-          <li class="nav-items">Maps</li>
-          <li class="nav-items">Pages</li>
-          <li class="nav-items">UI Elements</li>
-        </ul>
-      </nav>
-
+      <aside>
+        <nav>
+          <ul class="nav-list">
+            <li class="nav-items"><a href="#">Dashboard</a></li>
+            <li class="nav-items"><a href="#">Charts</a></li>
+            <li class="nav-items"><a href="#">Tables</a></li>
+            <li class="nav-items"><a href="#">Forms</a></li>
+            <li class="nav-items"><a href="#">Calendar</a></li>
+            <li class="nav-items"><a href="#">Maps</a></li>
+            <li class="nav-items"><a href="#">Pages</a></li>
+            <li class="nav-items"><a href="#">UI Elements</a></li>
+          </ul>
+        </nav>
+      </aside>
       <div class="main-area">
         <section>
           <div class="section-title">
