--- a/day8/index.html
+++ b/day8/index.html
@@ -23,17 +23,17 @@
       <nav>
         <ul>
           <li class="menu-items"><a class="menu-links" href="#">HOME</a></li>
-          <li class="menu-items"><a class="menu-links" href="#">ABOUT</a></li>
+          <li class="menu-items"><a class="menu-links" href="about.html">ABOUT</a></li>
           <li class="menu-items"><a class="menu-links" href="#">FEATURE</a></li>
-          <li class="menu-items"><a class="menu-links" href="#">SERVICE</a></li>
-          <li class="menu-items"><a class="menu-links" href="#">CONTACT</a></li>
+          <li class="menu-items"><a class="menu-links" href="service.html">SERVICE</a></li>
+          <li class="menu-items"><a class="menu-links" href="contact.html">CONTACT</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
   <main>
-    <section class="banner">
+    <section id="banner-id" class="banner">
 
       <div class="banner-content">
         <div class="banner-text">
@@ -49,7 +49,7 @@
       </div>
 
     </section>
-    <section class="about">
+    <section id="about-id" class="about">
       <img class="rose" src="china-rose.png" alt="">
       <img class="jasmine" src="jasmine.png" alt="">
       <div class="about-content wrap">
@@ -60,7 +60,7 @@
         <button>READ MORE</button>
       </div>
     </section>
-    <section class="gallery">
+    <section id="gallery-id" class="gallery">
       <div class="gallery-items gallery-1">
         <img class="gallery-img" src="1.jpg" alt="">
         <div class="gallery-hover">
@@ -90,7 +90,7 @@
         </div>
       </div>
     </section>
-    <section class="popular wrap">
+    <section id="popular-id" class="popular wrap">
       <div class="popular-header">
         <h1>Popular Procedures</h1>
         <p>To doesn't his appear replenish together called he of mad place won't wherein blessed second every wherein were meat kind wherein and martcin</p>
@@ -100,36 +100,40 @@
           <img src="11.jpg" alt="">
           <a href="#">Massage Therapy</a>
           <p>Living winged said you darkness you're divide gathered and bring one seasons face great dr Waters firmament place which.</p>
-          <a href="#">READ MORE</a>
+          <a class="readmore" href="#">READ MORE</a>
         </div>
         <div class="popular-items">
           <img src="12.jpg" alt="">
           <a href="#">Beauty Care</a>
           <p>Living winged said you darkness you're divide gathered and bring one seasons face great dr Waters firmament place which.</p>
-          <a href="#">READ MORE</a>
+          <a class="readmore" href="#">READ MORE</a>
         </div>
         <div class="popular-items">
           <img src="13.jpg" alt="">
           <a href="#">Executive Reflexology</a>
           <p>Living winged said you darkness you're divide gathered and bring one seasons face great dr Waters firmament place which.</p>
-          <a href="#">READ MORE</a>
+          <a class="readmore" href="#">READ MORE</a>
         </div>
       </div>
     </section>
     <section class="quotes">
-      <img src="quote.png" alt="">
-      <div>
-        <p>First i beast be fruitful open you tree all Won't can't likeness and you're have whales creature seed to two grass life blessed you meat shall you winged under from their there he That you're one called gather make much red wherein set fourth green bearing fifth replenish given she had.</p>
-        <img src="client-1.png" alt="">
-        <p>Jack Marsh, Executive</p>
-      </div>
-      <input type="checkbox" id="check">
-      <div>
-        <p>First i beast be fruitful open you tree all Won't can't likeness and you're have whales creature seed to two grass life blessed you meat shall you winged under from their there he That you're one called gather make much red wherein set fourth green bearing fifth replenish given she had.</p>
-        <img src="client-1.png" alt="">
-        <p>Jack Marsh, Executive</p>
-      </div>
-      <label for="check">.</label>
+      <img class="quote-img" src="quote.png" alt="">
+      <div class="quotes-container">
+        <div class="quotes-one">
+          <p>First i beast be fruitful open you tree all Won't can't likeness and you're have whales creature seed to two grass life blessed you meat shall you winged under from their there he That you're one called gather make much red wherein set fourth green bearing fifth replenish given she had.</p>
+          <img class="quotes-portrait" src="client-1.png" alt="">
+          <p style="font-size: 22px; font-weight: 400;
+          line-height: 35px;">Jack Marsh, <span style='font-size: 15px; font-family: "Roboto", sans-serif; font-weight: 300;'>Executive</span></p>
+        </div>
+        <input type="checkbox" id="check">
+        <div class="quotes-two">
+          <p>First i beast be fruitful open you tree all Won't can't likeness and you're have whales creature seed to two grass life blessed you meat shall you winged under from their there he That you're one called gather make much red wherein set fourth green bearing fifth replenish given she had.</p>
+          <img class="quotes-portrait" src="client-1.png" alt="">
+          <p style="font-size: 22px; font-weight: 400;
+          line-height: 35px;">Jack Marsh, <span style='font-size: 15px; font-family: "Roboto", sans-serif; font-weight: 300;'>Executive</span></p>
+        </div>
+      </div> 
+      <label for="check"><i class="fas fa-arrows-alt-h"></i></label>
     </section>
     <section class="team wrap">
       <div class="team-header">
@@ -160,9 +164,9 @@
         </div>
       </div>
     </section>
-    <section>
+    <section class="appointment">
       <img src="appointment-img.jpg" alt="">
-      <form>
+      <form class="appointment-form" >
         <input type="text" placeholder="NAME">
         <input type="email" placeholder="EMAIL ADDRESS">
         <select name="sv" id="sv">
@@ -173,7 +177,7 @@
         <input type="text" placeholder="PHONE NUMBER">
         <input type="date">
         <input type="time">
-        <input type="text" placeholder="YOUR NOTES">
+        <textarea placeholder="YOUR NOTES"></textarea> 
         <button>MAKE AN APPOINTMENT</button>
       </form>
     </section>
@@ -187,30 +191,30 @@
           <img src="11.jpg" alt="">
           <h2>Massage Therapy</h2>
           <p>Living winged said you darkness you're divide gathered and bring one seasons face great dr Waters firmament place which.</p>
-          <a href="READ MORE"></a>
+          <a class="readmore" href="#">READ MORE</a>
         </div>
         <div class="popular-items">
           <img src="12.jpg" alt="">
           <h2>Beauty Care</h2>
           <p>Living winged said you darkness you're divide gathered and bring one seasons face great dr Waters firmament place which.</p>
-          <a href="READ MORE"></a>
+          <a class="readmore" href="#">READ MORE</a>
         </div>
         <div class="popular-items">
           <img src="13.jpg" alt="">
           <h2>Executive Reflexology</h2>
           <p>Living winged said you darkness you're divide gathered and bring one seasons face great dr Waters firmament place which.</p>
-          <a href="READ MORE"></a>
+          <a class="readmore" href="#">READ MORE</a>
         </div>
       </div>
     </section>
-    <section class="contact">
+    <section id="contact-id"class="contact">
       <div class="contact-header">
         <h1>Get In Touch</h1>
         <p>To doesn't his appear replenish together called he of mad place won't wherein blessed second every wherein were meat kind wherein and martcin</p>
       </div>
       <div class="contact-info">
         <div class="contact-row">
-          <div class="contact-icon">
+          <div id="this" class="contact-icon">
             <i class="far fa-map"></i>
           </div>
           <div class="contact-text">
@@ -228,8 +232,8 @@
           </div>
        </div>
        <div class="contact-row">
-          <div class="contact-icon">
-            <i class="far fa-map"></i>
+          <div id="that" class="contact-icon">
+            <i class="fas fa-mobile-alt"></i>
           </div>
           <div class="contact-text">
             <a href="#">tel: 0000.000.0000</a>
@@ -237,7 +241,7 @@
           </div>
         </div>
       </div>
-      <form action="">
+      <form class="contact-form"action="">
         <input type="text" placeholder="NAME">
         <input type="email" placeholder="EMAIL ADDRESS">
         <input type="text" placeholder="COMMENTS">
@@ -257,13 +261,13 @@
       </ul>
     </nav>
     <div class="footer-links">
-      <i class="fab fa-facebook-f"></i>
-      <i class="fab fa-twitter"></i>
-      <i class="fab fa-vimeo-v"></i>
-      <i class="fab fa-instagram"></i>
+      <div class="footer-icon"><i class="fab fa-facebook-f"></i></div>
+      <div class="footer-icon"><i class="fab fa-twitter"></i></div>
+      <div class="footer-icon"><i class="fab fa-vimeo-v"></i></div>
+      <div class="footer-icon"><i class="fab fa-instagram"></i></div>
     </div>
     <p>
-      © COPYRIGHT 2019 <a>THEMEIES.COM.</a> ALL RIGHTS RESERVED
+      © COPYRIGHT 2019 <a id="last" href="#">THEMEIES.COM.</a> ALL RIGHTS RESERVED
     </p>
   </footer>
 </body>
