--- a/day8/index.html
+++ b/day8/index.html
@@ -253,11 +253,11 @@
     <img src="logo.png" alt="">
     <nav>
       <ul>
-        <li class="menu-items"><a class="menu-links" href="#">HOME</a></li>
-        <li class="menu-items"><a class="menu-links" href="#">ABOUT</a></li>
+        <li class="menu-items"><a class="menu-links" href="index.html">HOME</a></li>
+        <li class="menu-items"><a class="menu-links" href="about.html">ABOUT</a></li>
         <li class="menu-items"><a class="menu-links" href="#">FEATURE</a></li>
-        <li class="menu-items"><a class="menu-links" href="#">SERVICE</a></li>
-        <li class="menu-items"><a class="menu-links" href="#">CONTACT</a></li>
+        <li class="menu-items"><a class="menu-links" href="service.html">SERVICE</a></li>
+        <li class="menu-items"><a class="menu-links" href="contact.html">CONTACT</a></li>
       </ul>
     </nav>
     <div class="footer-links">
