--- a/day10/test.html
+++ b/day10/test.html
@@ -17,5 +17,26 @@
     <div class="items items7"></div>
   </div>
 
+  <div class="room-list">
+    <div class="room-types">
+      <img src="gdl.webp" alt="">
+      <a href="#">Grand Deluxe</a>
+      <p>The standard for you</p>
+      <a class="readmore" href="#">READ MORE</a>
+    </div>
+    <div class="room-types">
+      <img src="exe.webp" alt="">
+      <a href="#">Executive With Balcony</a>
+      <p>Enjoy The View</p>
+      <a class="readmore" href="#">READ MORE</a>
+    </div>
+    <div class="room-types">
+      <img src="fam.webp" alt="">
+      <a href="#">Family With Balcony</a>
+      <p>For your children also</p>
+      <a class="readmore" href="#">READ MORE</a>
+    </div>
+  </div>
+
 </body>
 </html>
