--- a/day10/index.html
+++ b/day10/index.html
@@ -16,6 +16,9 @@
   <title>Leospa</title>
 </head>
 <body>
+  <div class="scroll-btn">
+    <i class="fas fa-angle-double-up"></i>
+  </div>
   <header>
     <div class="header-container">
       <p id="statement">
@@ -28,7 +31,7 @@
           <li><a href="#" style="color: white">ROOMS</a></li>
           <li><a href="#" style="color: white">FACILITIES</a></li>
           <li><a href="#" style="color: white">OFFERS</a></li>
-          <li><a href="#" style="color: white">CONTACT</a></li>
+          <li><a href="#contact-link" style="color: white">CONTACT</a></li>
         </ul>
       </nav>
       
@@ -46,7 +49,7 @@
         </div>
       </div>
       <div class="logo-container">
-        <img src="2-1-7.png" alt="">
+        <a href=""><img src="2-1-7.png" alt=""></a>
       </div>
 
       <div class="slogan-container">
@@ -151,7 +154,7 @@
     </section>
   </main>
   <footer>
-    <div class="upper-footer">
+    <div id="contact-link" class="upper-footer">
       <h2>FIND US</h2>
       <p> 18/76 Trần Thái Tông street, Cầu Giấy district,Hanoi, Vietnam</p>
       <p>+84 24 3581 4666</p>
