--- a/day10/index.html
+++ b/day10/index.html
@@ -17,7 +17,9 @@
 </head>
 <body>
   <div class="scroll-btn">
-    <i class="fas fa-angle-double-up"></i>
+    <a id="topup" href="#statement">
+      <i class="fas fa-angle-double-up"></i>
+    </a>
   </div>
   <header>
     <div class="header-container">
@@ -27,10 +29,10 @@
 
       <nav>
         <ul>
-          <li><a href="#" style="color: white">ABOUT</a></li>
-          <li><a href="#" style="color: white">ROOMS</a></li>
-          <li><a href="#" style="color: white">FACILITIES</a></li>
-          <li><a href="#" style="color: white">OFFERS</a></li>
+          <li><a href="index.html" style="color: white">HOMEPAGE</a></li>
+          <li><a href="rooms.html" style="color: white">ROOMS</a></li>
+          <li><a href="facilities.html" style="color: white">FACILITIES</a></li>
+          <li><a href="#latest-section" style="color: white">LATEST</a></li>
           <li><a href="#contact-link" style="color: white">CONTACT</a></li>
         </ul>
       </nav>
@@ -63,7 +65,7 @@
     </div>
   </header>
   <main>
-    <section class="welcome">
+    <section id="about" class="welcome">
       <div class="welcome-img">
         <img src="lobby-3_49886295237_o.jpg" alt="">
       </div>
@@ -121,7 +123,6 @@
     <section class="facilities">
       <div class="facilities-text">
         <h1>WELLNESS AT OUR HOUSES</h1>
-        <h2></h2>
         <p>Experience the best of our houses when you dine, play and stay with us.</p>
       </div>
       <input type="radio" id="c1" checked>
@@ -150,6 +151,23 @@
           <label id="l2" for="c2">Fitness centre</label>
           <label id="l3" for="c3">Sauna</label>
         </div>
+      </div>
+    </section>
+    <section id="latest-section" class="latest">
+      <h1>LATEST HAPPENINGS</h1>
+      <div class="latest-items">
+        <img src="a73f77164878cf0e8d799758c5dbe2e1.jpg" alt="">
+        <h3>21 JUL 2020</h3>
+        <h2>Sunday Sessions</h2>
+        <p>Sunday Sessions are back! Get ready for positive vibes, free-flow drinks and vibrant beats from the region's hottest DJs and performers.</p>
+        <a class="slogan-btn trans-btn" href="#" style="color: white" href="#">Discover</a>
+      </div>
+      <div class="latest-items">
+        <img src="a73f77164878cf0e8d799758c5dbe2e1.jpg" alt="">
+        <h3>19 JUL 2020</h3>
+        <h2>Our Signature Events</h2>
+        <p>Up Close is our signature events series of intimate talks with cultural tastemakers and pioneers to spark thoughtful conversations.</p>
+        <a class="slogan-btn trans-btn" href="#" style="color: white" href="#">Discover</a>
       </div>
     </section>
   </main>
