--- a/day10/rooms.html
+++ b/day10/rooms.html
@@ -97,7 +97,7 @@
             <h2>Executive With Balcony</h2>
             <ul>
               <li>55m² - Maximum 2 persons</li>
-              <li>1 queen-size bed</li>
+              <li>1 king-size bed</li>
               <li>Balcony</li>
               <li>Air conditioning</li>
               <li>Separate Rain Shower and bathtub</li>
@@ -112,7 +112,7 @@
             <h2>Family With Balcony</h2>
             <ul>
               <li>65m² - Maximum 4 persons</li>
-              <li>2 queen-size bed</li>
+              <li>2 king-size beds</li>
               <li>Balcony</li>
               <li>Air conditioning</li>
               <li>Separate Rain Shower and bathtub</li>
