--- a/day10/rooms.html
+++ b/day10/rooms.html
@@ -50,7 +50,7 @@
           <a class="trans-btn" href="#" style="color: white">BOOK NOW</a>
         </div>
       </div>
-      <div style="visibility: hidden;"class="logo-container">
+      <div style="position:absolute; left: 50%; top: 40%; transform: translate(-50%,-50%)"class="logo-container">
         <a href=""><img src="2-1-7.png" alt=""></a>
       </div>
 
