--- a/day10/rooms.html
+++ b/day10/rooms.html
@@ -78,7 +78,9 @@
       </div>
       <div class="rooms-list-2">
         <div class="rooms-types-2">
-          <img src="gdl.webp" alt="">
+          <div class="image image1">
+            <img id="anh1" src="gdl.webp" alt="">
+          </div>
           <div class="room-text">
             <h2>Grand Deluxe</h2>
             <ul>
@@ -92,7 +94,9 @@
           </div>
         </div>
         <div class="rooms-types-2">
-          <img src="exe.webp" alt="">
+          <div class="image image2">
+            <img id="anh2" src="exe.webp" alt="">
+          </div>
           <div class="room-text">
             <h2>Executive With Balcony</h2>
             <ul>
@@ -107,7 +111,9 @@
           </div>
         </div>
         <div class="rooms-types-2">
-          <img src="fam.webp" alt="">
+          <div class="image image3"> 
+            <img id="anh3"src="fam.webp" alt="">
+          </div>
           <div class="room-text">
             <h2>Family With Balcony</h2>
             <ul>
