--- a/day10/index.html
+++ b/day10/index.html
@@ -100,21 +100,21 @@
           <img src="gdl.webp" alt="">
           <div class="room-details">
             <h2>Grand Deluxe (45m² - 2p)</h2>
-            <a style="color: white" href="#" class="details">Details</a>
+            <a style="color: white" href="rooms.html" class="details">Details</a>
           </div>
         </div>
         <div class="rooms-types">
           <img src="exe.webp" alt="">
           <div class="room-details">
             <h2>Executive With Balcony (55m² - 2p)</h2>
-            <a style="color: white" href="#" class="details">Details</a>
+            <a style="color: white" href="rooms.html" class="details">Details</a>
           </div>
         </div>
         <div class="rooms-types">
           <img src="fam.webp" alt="">
           <div class="room-details">
             <h2>Family With Balcony (65m² - 4p)</h2>
-            <a style="color: white" href="#" class="details">Details</a>
+            <a style="color: white" href="rooms.html" class="details">Details</a>
           </div>
         </div>
       </div>
