--- a/jsb4/newindex2.html
+++ b/jsb4/newindex2.html
@@ -6,6 +6,6 @@
     <title>abc</title>
 </head>
 <body>
-    <script src="newscript.js"></script>
+    <script src="newscript2.js"></script>
 </body>
 </html>
