--- a/ss2ep01/index.html
+++ b/ss2ep01/index.html
@@ -3,18 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <title>ss2</title>
 </head>
 <body>
-  <div class="page-container">
-    <div class="items" id = "i1"></div>
-    <div class="items" id = "i2"></div>
-    <div class="items" id = "i3"></div>
-    <div class="items" id = "i4"></div>
-    <div class="items" id = "i5"></div>
-    <div class="items" id = "i6"></div>
-  </div>
-  
+  <script src="script.js"></script>
 </body>
 </html>
