--- a/ss2ep01/index.html
+++ b/ss2ep01/index.html
@@ -4,8 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ss2</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
+<div class="page-container">
+  <div class="items" id="item1"></div>
+  <div class="items" id="item2"></div>
+  <div class="items" id="item3"></div>
+  <div class="items" id="item4"></div>
+  <div class="items" id="item5"></div>
+  <div class="items" id="item6"></div>
+  <div class="items" id="item7"></div>
+  <div class="items" id="item8"></div>
+  <div class="items" id="item1"></div>
+</div> 
+
   <script src="script.js"></script>
 </body>
 </html>
