--- a/ss2ep01/index.html
+++ b/ss2ep01/index.html
@@ -9,15 +9,15 @@
 <body>
   
 <div class="page-container">
-  <div class="items" id="item1"></div>
-  <div class="items" id="item2"></div>
-  <div class="items" id="item3"></div>
-  <div class="items" id="item4"></div>
-  <div class="items" id="item5"></div>
-  <div class="items" id="item6"></div>
-  <div class="items" id="item7"></div>
-  <div class="items" id="item8"></div>
-  <div class="items" id="item1"></div>
+  <div class="items"></div>
+  <div class="items"></div>
+  <div class="items"></div>
+  <div class="items"></div>
+  <div class="items"></div>
+  <div class="items"></div>
+  <div class="items"></div>
+  <div class="items"></div>
+  <div class="items"></div>
 </div> 
 
   <script src="script.js"></script>
