--- a/ss2ep2/test.html
+++ b/ss2ep2/test.html
@@ -7,19 +7,43 @@
   <link rel="stylesheet" href="test.css">
 </head>
 <body>
-  <header>
+  <div class="bai1">
 
-  </header>
-  <main>
-    <div class="content">
-      <div class="items"></div>
-      <div class="items"></div>
-      <div class="items"></div>
-      <div class="items"></div>
+    <div class="header1">
+      <h2 class="title1">Bài 1</h2>
     </div>
-    <aside>
 
-    </aside>
-  </main>
+    <div class="main1">
+
+      <div class="content1">
+        <div class="items1"></div>
+        <div class="items1"></div>
+        <div class="items1"></div>
+        <div class="items1"></div>
+      </div>
+      <div class="aside1">
+
+      </div>
+
+    </div>
+
+  </div>
+
+<!-- ----- Bai 2 ----- -->
+
+  <div class="bai2">
+
+    <div class="header2">
+      <div class="items2"><h3>Bai 2</h3></div>
+      <div class="items2"><h3>Bai 2</h3></div>
+      <div class="items2"><h3>Bai 2</h3></div>
+    </div>
+
+    <div class="main2">
+
+    </div>
+
+  </div>
+
 </body>
 </html>
