--- a/ss2ep2/test.html
+++ b/ss2ep2/test.html
@@ -34,9 +34,9 @@
   <div class="bai2">
 
     <div class="header2">
-      <div class="items2"><h3>Bai 2</h3></div>
-      <div class="items2"><h3>Bai 2</h3></div>
-      <div class="items2"><h3>Bai 2</h3></div>
+      <div class="items2"><h3>Bai 2</h3></div><!--
+      --><div class="items2"><h3>Bai 2</h3></div><!--
+      --><div class="items2"><h3>Bai 2</h3></div>
     </div>
 
     <div class="main2">
