--- a/ss2ep2/test.html
+++ b/ss2ep2/test.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="test.css">
 </head>
 <body>
-  <div class="bai1">
+<!--   <div class="bai1">
 
     <div class="header1">
       <h2 class="title1">Bài 1</h2>
@@ -27,7 +27,7 @@
 
     </div>
 
-  </div>
+  </div> -->
 
 <!-- ----- Bai 2 ----- -->
 
@@ -44,6 +44,6 @@
     </div>
 
   </div>
-
+  <script src="script.js"></script>
 </body>
 </html>
