--- a/ss2ep2/test.html
+++ b/ss2ep2/test.html
@@ -7,10 +7,11 @@
   <link rel="stylesheet" href="test.css">
 </head>
 <body>
-<!--   <div class="bai1">
+  <!-------- Bai 1 -------->
+  <div class="bai1">
 
     <div class="header1">
-      <h2 class="title1">Bài 1</h2>
+      <h2 class="title1">Bài 3</h2>
     </div>
 
     <div class="main1">
@@ -27,16 +28,16 @@
 
     </div>
 
-  </div> -->
+  </div>
 
-<!-- ----- Bai 2 ----- -->
+<!-------- Bai 2 -------->
 
   <div class="bai2">
 
     <div class="header2">
-      <div class="items2"><h3>Bai 2</h3></div><!--
-      --><div class="items2"><h3>Bai 2</h3></div><!--
-      --><div class="items2"><h3>Bai 2</h3></div>
+      <div class="items2"><h3>Bai 4</h3></div><!--
+      --><div class="items2"><h3>Bai 4</h3></div><!--
+      --><div class="items2"><h3>Bai 4</h3></div>
     </div>
 
     <div class="main2">
@@ -44,6 +45,30 @@
     </div>
 
   </div>
+
+<!-------- Bai 3 -------->
+
+<div class="bai3">
+
+  <div class="header3">
+    <div class="items3"><h3>Bai 5</h3></div>
+    <div class="items3"><h3>Bai 5</h3></div>
+    <div class="items3"><h3>Bai 5</h3></div>
+  </div>
+
+  <div class="main3">
+
+    <div class="content3">
+
+    </div>
+    <div class="content3">
+
+    </div>
+
+  </div>
+
+</div>
+
   <script src="script.js"></script>
 </body>
 </html>
