--- a/ss2ep3/index.html
+++ b/ss2ep3/index.html
@@ -9,12 +9,12 @@
 <body>
   <div class="bai6">
     <div class="header6">
-      <div class="logo-button-container">
-        <label for="check" class="flex-center"><p style="position: relative; bottom: 5px">=</p></label>
-        <div class="logo flex-center"><p>LOGO</p></div>
+      <div class="logo-button-container6">
+        <label for="check6" class="flex-center"><p style="position: relative; bottom: 5px">=</p></label>
+        <div class="logo6 flex-center"><p>LOGO</p></div>
       </div>
-      <input id="check" type="checkbox">
-      <div class="menu-container">
+      <input id="check6" type="checkbox">
+      <div class="menu-container6">
         <ul>
           <li><a href="#" class="flex-center">Trang chủ</a></li>
           <li><a href="#" class="flex-center">Menu 1</a></li>
@@ -25,7 +25,38 @@
       
     </div>
     <div class="main6">
-      <div class="content">
+      <div class="content6">
+
+      </div>
+    </div>
+  </div>
+  <div class="bai7">
+    <div class="header7">
+      <div class="logo-button-container7">
+        <label for="check7" class="flex-center"><p style="position: relative; bottom: 5px">=</p></label>
+        <div class="logo7 flex-center"><p>LOGO</p></div>
+      </div>
+      <input id="check7" type="checkbox">
+      <div class="menu-container7">
+        <ul>
+          <li><a href="#" class="flex-center">Menu 1</a></li>
+          <li><a href="#" class="flex-center">Menu 2</a></li>
+          <li><a href="#" class="flex-center">Menu 3</a></li>
+          <li><a href="#" class="flex-center">Login</a></li>
+          <li><a href="#" class="flex-center">Register</a></li>
+        </ul>
+        <ul>
+          <li><a href="#" class="flex-center">Login</a></li>
+          <li><a href="#" class="flex-center">Register</a></li>
+        </ul>
+      </div>
+      
+    </div>
+    <div class="main7">
+      <div class="content7-1">
+
+      </div>
+      <div class="content7-2">
 
       </div>
     </div>
