--- a/ss2ep3/index.html
+++ b/ss2ep3/index.html
@@ -11,7 +11,7 @@
     <div class="header6">
       <div class="logo-button-container6">
         <label for="check6" class="flex-center"><p style="position: relative; bottom: 5px">=</p></label>
-        <div class="logo6 flex-center"><p>LOGO</p></div>
+        <div class="logo6 flex-center"><p>Bài 6</p></div>
       </div>
       <input id="check6" type="checkbox">
       <div class="menu-container6">
@@ -34,7 +34,7 @@
     <div class="header7">
       <div class="logo-button-container7">
         <label for="check7" class="flex-center"><p style="position: relative; bottom: 5px">=</p></label>
-        <div class="logo7 flex-center"><p>LOGO</p></div>
+        <div class="logo7 flex-center"><p>Bài 7</p></div>
       </div>
       <input id="check7" type="checkbox">
       <div class="menu-container7">
