--- a/ss2ep3/index.html
+++ b/ss2ep3/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../fontawesome-free-5.15.1-web/css/all.min.css">
   <title>Document</title>
 </head>
 <body>
   <div class="bai6">
     <div class="header6">
       <div class="logo-button-container6">
-        <label for="check6" class="flex-center"><p style="position: relative; bottom: 5px">=</p></label>
+        <button id="button6" class="flex-center"><i class="fas fa-bars"></i></button>
         <div class="logo6 flex-center"><p>Bài 6</p></div>
       </div>
-      <input id="check6" type="checkbox">
-      <div class="menu-container6">
+      <div id="menu-container6">
         <ul>
           <li><a href="#" class="flex-center">Trang chủ</a></li>
           <li><a href="#" class="flex-center">Menu 1</a></li>
@@ -30,14 +30,17 @@
       </div>
     </div>
   </div>
+<!--
+
+
+-->
   <div class="bai7">
     <div class="header7">
       <div class="logo-button-container7">
-        <label for="check7" class="flex-center"><p style="position: relative; bottom: 5px">=</p></label>
-        <div class="logo7 flex-center"><p>Bài 7</p></div>
+        <button id="button7" class="flex-center"><i class="fas fa-bars"></i></button>
+        <div id="logo7" class="flex-center"><p>Bài 7</p></div>
       </div>
-      <input id="check7" type="checkbox">
-      <div class="menu-container7">
+      <div id="menu-container7">
         <ul>
           <li><a href="#" class="flex-center">Menu 1</a></li>
           <li><a href="#" class="flex-center">Menu 2</a></li>
@@ -61,5 +64,7 @@
       </div>
     </div>
   </div>
+  <script src="script.js"></script>
+  <script src="../fontawesome-free-5.15.1-web/js/all.min.js"></script>
 </body>
 </html>
