--- a/Minimo/Minimo/test2.html
+++ b/Minimo/Minimo/test2.html
@@ -12,7 +12,7 @@
   
   <link rel="stylesheet" href="../../fontawesome-free-5.15.1-web/css/all.min.css">
 
-  <link rel="stylesheet" href="stylee.css">
+  <link rel="stylesheet" href="style.css">
 </head>
   
 <body>
@@ -41,54 +41,52 @@
 
       <div class="blogs">
         <div class="posts">
-          <img src="/Minimo/Minimo/JPG/1st-row-left.jpg" alt="">
+          <img src="jpg/1st-row-left.jpg" alt="">
           <h3>Lifestyle</h3>
           <h2>More than just a music festival</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
         </div>
 
         <div class="posts">
-          <img src="/Minimo/Minimo/JPG/1st-row-right.jpg" alt="">
+          <img src="jpg/1st-row-right.jpg" alt="">
           <h3>Lifestyle</h3>
           <h2>Life tastes better with coffee</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
         </div>
 
         <div class="posts">
-          <img src="/Minimo/Minimo/JPG/2nd-row-left.jpg" alt="">
+          <img src="jpg/2nd-row-left.jpg" alt="">
           <h3>Photodiary</h3>
           <h2>American dream</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
         </div>
 
         <div class="posts">
-          <img src="/Minimo/Minimo/JPG/2nd-row-right.jpg" alt="">
+          <img src="jpg/2nd-row-right.jpg" alt="">
           <h3>Photodiary</h3>
           <h2>A day exploring the Alps</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
         </div>
       </div>
-  </div>
 
-  <div class="sign-up">
-    <h2>Sign up for our newsletter!</h2>
-    <div class="form-container">
-      <input type="text" placeholder="Enter a valid email address">
-      <button><i class="far fa-paper-plane"></i></button>
-    </div>
-  </div>
-
-  <div class="page-container">
-      <div class="blogs" id="blog2">
+      <div class="sign-up col-12">
+        <h2>Sign up for our newsletter!</h2>
+        <div class="form-container">
+          <input type="text" placeholder="Enter a valid email address">
+          <button><i class="far fa-paper-plane"></i></button>
+        </div>
+      </div>
+      
+      <div class="blogs">
         <div class="posts">
-          <img src="/Minimo/Minimo/JPG/3rd-row-left.jpg" alt="">
+          <img src="jpg/3rd-row-left.jpg" alt="">
           <h3>Lifestyle</h3>
           <h2>Top 10 song for running</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
         </div>
 
         <div class="posts">
-          <img src="/Minimo/Minimo/JPG/3rd-row-right.jpg" alt="">
+          <img src="jpg/3rd-row-right.jpg" alt="">
           <h3>Lifestyle</h3>
           <h2>Cold winter days</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
@@ -98,7 +96,7 @@
         <a class="loadmore" href="#">Load more</a>
 
     </main>
-  </div>  
+
     <footer>
       <div class="terms">
         <a>Terms and conditions</a>
@@ -111,7 +109,7 @@
         <a href="#"><i class="fab fa-instagram"></i></a>
       </div>
     </footer>
-  
+  </div>
 
   <script src="../fontawesome-free-5.15.1-web/js/all.min.js"></script>
   <script src="script.js"></script>
