--- a/Minimo/Minimo/post-full-width.html
+++ b/Minimo/Minimo/post-full-width.html
@@ -68,23 +68,55 @@
       </div>
     </div>
     <div class="also">
-      <p>YOU MAY ALSO LIKE</p>
+      <div class="also-container">
+        <p>YOU MAY ALSO LIKE</p>
 
-      <div class="also-posts">
-        <img src="/Minimo/Minimo/fullwidth/also-1.jpg" alt="">
-        <p>Cold winter days</p>
+        <div class="also-posts">
+          <img src="/Minimo/Minimo/fullwidth/also-1.jpg" alt="">
+          <a>Cold winter days</a>
+        </div>
+
+        <div class="also-posts">
+          <img src="/Minimo/Minimo/fullwidth/also-2.jpg" alt="">
+          <a>A day exploring the Alps</a>
+        </div>
+
+        <div class="also-posts">
+          <img src="/Minimo/Minimo/fullwidth/also-3.jpg" alt="">
+          <a>American dream</a>
+        </div>
+
       </div>
-      <div class="also-posts">
-        <img src="/Minimo/Minimo/fullwidth/also-2.jpg" alt="">
-        <p>A day exploring the Alps</p>
+    </div>
+    <div class="comments-container">
+      <p>2 COMMENTS</p>
+      <div class="comments">
+
+        <img src="/Minimo/Minimo/fullwidth/Livello_2.png" alt="">
+        <div class="comments-area">
+          <p class="name">John Doe</p>
+          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo!</p>
+          <p>Reply</p>
+        </div>
       </div>
-      <div class="also-posts">
-        <img src="/Minimo/Minimo/fullwidth/also-3.jpg" alt="">
-        <p>American dream</p>
+
+      <div class="comments">
+        <img src="/Minimo/Minimo/fullwidth/JD.png" alt="">
+        <div class="comments-area">
+          <p class="name">Jane Doe</p>
+          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
+          <p>Reply</p>
+        </div>
+      </div>
+
+      <div class="comments">
+        <img src="/Minimo/Minimo/fullwidth/Livello_2.png" alt="">
+        <div class="comments-area empty">
+         <input type="text" placeholder="JOIN THE DISCUSSION">
+        </div>
       </div>
 
     </div>
-
   </main>
 
   <footer>
