--- a/startup-demo/index.html
+++ b/startup-demo/index.html
@@ -16,7 +16,7 @@
 </head>
   
 <body>
-<div class="page-container">
+<!-- <div class="page-container">
   <header>
     <div class="logo-button-container">
       <button id="menu-button"><i class="fas fa-bars"></i></button>
@@ -155,97 +155,122 @@
       </div>      
     </section>
 
-    <section class="news">
-      <a href="#" class="news-items-wrapper">
-        <div class="news-items">
-          <img src="Mask.png" alt="">
-          <div class="news-items-content">
-            <p class="news-title">Lorem ipsum dolor</p>
-            <div class="news-content-row">
-              <img src="news.png" alt="">
-              <p class="author">BY JOHN SMITH</p>
-              <img src="time.png" alt="">
-              <p class="mins">25MIN AGO</p>
+    <section class="news big-container">
+      <div class="news-area">
+        <a href="#" class="news-items-wrapper">
+          <div class="news-items">
+            <img src="Mask.png" alt="">
+            <div class="news-items-content">
+              <p class="news-title">Lorem ipsum dolor</p>
+              <div class="news-content-row">
+                <div class="author-area">
+                  <img src="news.png" alt="">
+                  <p class="author">BY JOHN SMITH</p>
+                </div>
+                <div class="time-area">
+                  <img src="time.png" alt="">
+                  <p class="mins">25MIN AGO</p>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-      </a>
+        </a>
 
-      <a href="#" class="news-items-wrapper">
-        <div class="news-items">
-          <img src="Mask.png" alt="">
-          <div class="news-items-content">
-            <p class="news-title">Lorem ipsum dolor</p>
-            <div class="news-content-row">
-              <img src="news.png" alt="">
-              <p class="author">BY JOHN SMITH</p>
-              <img src="time.png" alt="">
-              <p class="mins">25MIN AGO</p>
+        <a href="#" class="news-items-wrapper">
+          <div class="news-items">
+            <img src="Mask.png" alt="">
+            <div class="news-items-content">
+              <p class="news-title">Lorem ipsum dolor</p>
+              <div class="news-content-row">
+                <div class="author-area">
+                  <img src="news.png" alt="">
+                  <p class="author">BY JOHN SMITH</p>
+                </div>
+                <div class="time-area">
+                  <img src="time.png" alt="">
+                  <p class="mins">25MIN AGO</p>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-      </a>
+        </a>
 
-      <a href="#" class="news-items-wrapper">
-        <div class="news-items">
-          <img src="Mask.png" alt="">
-          <div class="news-items-content">
-            <p class="news-title">Lorem ipsum dolor</p>
-            <div class="news-content-row">
-              <img src="news.png" alt="">
-              <p class="author">BY JOHN SMITH</p>
-              <img src="time.png" alt="">
-              <p class="mins">25MIN AGO</p>
+        <a href="#" class="news-items-wrapper">
+          <div class="news-items">
+            <img src="Mask.png" alt="">
+            <div class="news-items-content">
+              <p class="news-title">Lorem ipsum dolor</p>
+              <div class="news-content-row">
+                <div class="author-area">
+                  <img src="news.png" alt="">
+                  <p class="author">BY JOHN SMITH</p>
+                </div>
+                <div class="time-area">
+                  <img src="time.png" alt="">
+                  <p class="mins">25MIN AGO</p>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-      </a>
+        </a>
 
-      <a href="#" class="news-items-wrapper">
-        <div class="news-items">
-          <img src="Mask.png" alt="">
-          <div class="news-items-content">
-            <p class="news-title">Lorem ipsum dolor</p>
-            <div class="news-content-row">
-              <img src="news.png" alt="">
-              <p class="author">BY JOHN SMITH</p>
-              <img src="time.png" alt="">
-              <p class="mins">25MIN AGO</p>
+        <a href="#" class="news-items-wrapper">
+          <div class="news-items">
+            <img src="Mask.png" alt="">
+            <div class="news-items-content">
+              <p class="news-title">Lorem ipsum dolor</p>
+              <div class="news-content-row">
+                <div class="author-area">
+                  <img src="news.png" alt="">
+                  <p class="author">BY JOHN SMITH</p>
+                </div>
+                <div class="time-area">
+                  <img src="time.png" alt="">
+                  <p class="mins">25MIN AGO</p>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-      </a>
+        </a>
 
-      <a href="#" class="news-items-wrapper">
-        <div class="news-items">
-          <img src="Mask.png" alt="">
-          <div class="news-items-content">
-            <p class="news-title">Lorem ipsum dolor</p>
-            <div class="news-content-row">
-              <img src="news.png" alt="">
-              <p class="author">BY JOHN SMITH</p>
-              <img src="time.png" alt="">
-              <p class="mins">25MIN AGO</p>
+        <a href="#" class="news-items-wrapper">
+          <div class="news-items">
+            <img src="Mask.png" alt="">
+            <div class="news-items-content">
+              <p class="news-title">Lorem ipsum dolor</p>
+              <div class="news-content-row">
+                <div class="author-area">
+                  <img src="news.png" alt="">
+                  <p class="author">BY JOHN SMITH</p>
+                </div>
+                <div class="time-area">
+                  <img src="time.png" alt="">
+                  <p class="mins">25MIN AGO</p>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-      </a>
+        </a>
 
-      <a href="#" class="news-items-wrapper">
-        <div class="news-items">
-          <img src="Mask.png" alt="">
-          <div class="news-items-content">
-            <p class="news-title">Lorem ipsum dolor</p>
-            <div class="news-content-row">
-              <img src="news.png" alt="">
-              <p class="author">BY JOHN SMITH</p>
-              <img src="time.png" alt="">
-              <p class="mins">25MIN AGO</p>
+        <a href="#" class="news-items-wrapper">
+          <div class="news-items">
+            <img src="Mask.png" alt="">
+            <div class="news-items-content">
+              <p class="news-title">Lorem ipsum dolor</p>
+              <div class="news-content-row">
+                <div class="author-area">
+                  <img src="news.png" alt="">
+                  <p class="author">BY JOHN SMITH</p>
+                </div>
+                <div class="time-area">
+                  <img src="time.png" alt="">
+                  <p class="mins">25MIN AGO</p>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-      </a>
-
+        </a>
+      </div>
       <a href="#" class="see-more">DISCOVER NEWS</a>
     </section>
 
@@ -253,28 +278,44 @@
       <h2>Apply</h2>
       <p class="description">Thought experiments (Gedankenexperimenten) are “facts” in the sense</p>
       <form action="">
-        <label for="fname">First Name</label>
-        <input type="text" name="" id="fname">
 
-        <label for="name">Name</label>
-        <input type="text" name="" id="name">
-
-        <label for="email">Email</label>
-        <input type="email" name="" id="email">
-
-        <label for="tel">Telephone Number</label>
-        <input type="text" name="" id="tel">
-
-        <p>Upload your CV</p> 
-        <a href="#">
-          <div class="drag">
-            <p>Drag and drop a file or</p>
-            <p>Search a file</p>
+        <div class="form-col">
+          <div class="input-container">
+            <label for="fname">First Name</label>
+            <input type="text" name="" id="fname">
           </div>
-        </a>
+          <div class="input-container">
+            <label for="name">Name</label>
+            <input type="text" name="" id="name">
+          </div>
+        </div>
 
-        <label for="comment">Upload your CV</label>
-        <input type="text" name="" id="comment">
+        <div class="form-col">
+          <div class="input-container">
+            <label for="email">Email</label>
+            <input type="email" name="" id="email">
+          </div>
+          <div class="input-container">
+            <label for="tel">Telephone Number</label>
+            <input type="text" name="" id="tel">
+          </div>
+        </div>
+
+        <div class="full-area upload-area">
+          <p>Upload your CV</p> 
+          <a href="#">
+            <div class="drag">
+              <p>Drag and drop a file or</p>
+              <p>Search a file</p>
+            </div>
+          </a>
+        </div>
+
+        <div class="full-area comment-area">
+          <label for="comment">Comments</label>
+          <input type="text" name="" id="comment">
+        </div>
+
 
         <p class="apply-sm-text">
           Thought experiments (Gedankenexperimenten) are “facts” in the sense that they have a “real life” correlate in the form of electrochemical activity in the brain.
@@ -285,33 +326,37 @@
     </section>
 
   </main>
+</div>
+ -->
   <footer>
+  <div class="footer-container">
     <p class="footer-logo">STARTUP</p>
 
     <ul class="footer-menu">
       <li><a href="#">Team</a></li>
       <li><a href="#">About us</a></li>
       <li><a href="#">Process</a></li>
-      <li><a href="#">Logo</a></li>
       <li><a href="#">Explication</a></li>
       <li><a href="#">News</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
-
+  
     <p>Privacy Policy</p>
-
+  
     <p>Legal Notice</p>
-
-    <p>English</p>
-
-    <button class="footer-btn">
-      <img src="footerarrow.png" alt="">
-    </button>
-
-    <ul class="language-menu">
-      <li>English</li>
-      <li>Still English</li>
-    </ul>
+  
+    <div class="language-container">
+      <p>English</p>
+  
+      <button class="footer-btn">
+        <img src="footerarrow.png" alt="">
+      </button>
+    
+      <ul class="language-menu">
+        <li>English</li>
+        <li>Still English</li>
+      </ul>
+    </div>
 
     <a href="#">
       <img src="facebook.png" alt="">
@@ -326,8 +371,9 @@
       <img src="linkdenin.png" alt="">
     </a>
 
+  </div>
+
   </footer>
-</div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="../fontawesome-free-5.15.1-web/js/all.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
